# fumiko-bot

./: .gitignore  Cargo.toml  README.md  schema.sql
src/: access_control.rs  cache_warmer.rs  database_helpers.rs  deadline_handler.rs  google_books.rs  google_books_cache.rs  main.rs  maturity_check.rs  poll_handler.rs  selection_poll_handler.rs  types.rs  util.rs
src/commands/: explore.rs  mod.rs
src/commands/book_info/: botinfo.rs  info.rs  mod.rs
src/commands/helper/: deletedata.rs  help.rs  mod.rs
src/commands/server_admin/: adminprogress.rs  adminqueue.rs  clubreadadd.rs  clubreadremove.rs  config.rs  finishbook.rs  mature.rs  mod.rs  select.rs  setup.rs
src/commands/server_user/: clubrating.rs  clubread.rs  current.rs  mod.rs  queue.rs  stats.rs  userrating.rs
src/commands/user/: favorite.rs  mod.rs  numberone.rs  progress.rs  readinglist.rs
