[package]
name = "fumiko_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = "0.12.4" 
poise = "0.6.1"
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "bigdecimal", "chrono"] }
serde = { version = "1.0.219" }
serde_json = "1.0.140"
dotenvy = "0.15.7"
chrono = { version = "0.4.41", features = ["serde"] }
reqwest = { version = "0.12.23", features = ["json"] }
anyhow = "1.0.99"
rustrict = "0.7.36"
linkify = "0.10.0"
moka = { version = "0.12.10", features = ["sync", "future"] }
sha2 = "0.10.9"
hex = "0.4.3"
bincode = "2.0.1"
futures = "0.3.31"